--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -71,12 +71,6 @@
     <script src="app/account/reset/request/reset.request.controller.js"></script>
     <script src="app/account/reset/finish/reset.finish.state.js"></script>
     <script src="app/account/reset/finish/reset.finish.controller.js"></script>
-    <script src="app/entities/camera/camera.state.js"></script>
-    <script src="app/entities/camera/camera.service.js"></script>
-    <script src="app/entities/camera/camera.controller.js"></script>
-    <script src="app/entities/camera/camera-dialog.controller.js"></script>
-    <script src="app/entities/camera/camera-detail.controller.js"></script>
-    <script src="app/entities/camera/camera-delete-dialog.controller.js"></script>
     <script src="app/services/user/user.service.js"></script>
     <script src="app/services/auth/register.service.js"></script>
     <script src="app/services/auth/principal.service.js"></script>
@@ -92,6 +86,24 @@
     <script src="app/layouts/navbar/navbar.controller.js"></script>
     <script src="app/layouts/navbar/active-link.directive.js"></script>
     <script src="app/layouts/error/error.state.js"></script>
+    <script src="app/entities/script/script.state.js"></script>
+    <script src="app/entities/script/script.service.js"></script>
+    <script src="app/entities/script/script.controller.js"></script>
+    <script src="app/entities/script/script-dialog.controller.js"></script>
+    <script src="app/entities/script/script-detail.controller.js"></script>
+    <script src="app/entities/script/script-delete-dialog.controller.js"></script>
+    <script src="app/entities/project/project.state.js"></script>
+    <script src="app/entities/project/project.service.js"></script>
+    <script src="app/entities/project/project.controller.js"></script>
+    <script src="app/entities/project/project-dialog.controller.js"></script>
+    <script src="app/entities/project/project-detail.controller.js"></script>
+    <script src="app/entities/project/project-delete-dialog.controller.js"></script>
+    <script src="app/entities/map/map.state.js"></script>
+    <script src="app/entities/map/map.service.js"></script>
+    <script src="app/entities/map/map.controller.js"></script>
+    <script src="app/entities/map/map-dialog.controller.js"></script>
+    <script src="app/entities/map/map-detail.controller.js"></script>
+    <script src="app/entities/map/map-delete-dialog.controller.js"></script>
     <script src="app/entities/camera-action/camera-action.state.js"></script>
     <script src="app/entities/camera-action/camera-action.service.js"></script>
     <script src="app/entities/camera-action/camera-action.controller.js"></script>
@@ -109,6 +121,12 @@
     <script src="app/components/util/data-util.service.js"></script>
     <script src="app/components/util/capitalize.filter.js"></script>
     <script src="app/components/util/base64.service.js"></script>
+    <script src="app/entities/camera/camera.state.js"></script>
+    <script src="app/entities/camera/camera.service.js"></script>
+    <script src="app/entities/camera/camera.controller.js"></script>
+    <script src="app/entities/camera/camera-dialog.controller.js"></script>
+    <script src="app/entities/camera/camera-detail.controller.js"></script>
+    <script src="app/entities/camera/camera-delete-dialog.controller.js"></script>
     <script src="app/components/login/login.service.js"></script>
     <script src="app/components/login/login.controller.js"></script>
     <script src="app/components/form/uib-pagination.config.js"></script>
@@ -149,21 +167,21 @@
     <script src="app/admin/health/health.modal.controller.js"></script>
     <script src="app/admin/health/health.controller.js"></script>
     <script src="app/admin/docs/docs.state.js"></script>
-    <script src="app/account/settings/settings.state.js"></script>
-    <script src="app/account/settings/settings.controller.js"></script>
-    <script src="app/admin/audits/audits.state.js"></script>
-    <script src="app/admin/audits/audits.service.js"></script>
-    <script src="app/admin/audits/audits.controller.js"></script>
     <script src="app/admin/configuration/configuration.state.js"></script>
     <script src="app/admin/configuration/configuration.service.js"></script>
     <script src="app/admin/configuration/configuration.controller.js"></script>
+    <script src="app/admin/audits/audits.state.js"></script>
+    <script src="app/admin/audits/audits.service.js"></script>
+    <script src="app/admin/audits/audits.controller.js"></script>
+    <script src="app/account/settings/settings.state.js"></script>
+    <script src="app/account/settings/settings.controller.js"></script>
     <script src="app/account/register/register.state.js"></script>
     <script src="app/account/register/register.controller.js"></script>
-    <script src="app/account/activate/activate.state.js"></script>
-    <script src="app/account/activate/activate.controller.js"></script>
     <script src="app/account/password/password.state.js"></script>
     <script src="app/account/password/password.controller.js"></script>
     <script src="app/account/password/password-strength-bar.directive.js"></script>
+    <script src="app/account/activate/activate.state.js"></script>
+    <script src="app/account/activate/activate.controller.js"></script>
     <script src="app/home/home.state.js"></script>
     <script src="app/home/home.controller.js"></script>
     <script src="app/entities/entity.state.js"></script>
