--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -71,7 +71,6 @@
     <script src="app/account/reset/finish/reset.finish.controller.js"></script>
     <script src="app/account/reset/request/reset.request.state.js"></script>
     <script src="app/account/reset/request/reset.request.controller.js"></script>
-    <script src="app/services/user/user.service.js"></script>
     <script src="app/services/auth/register.service.js"></script>
     <script src="app/services/auth/principal.service.js"></script>
     <script src="app/services/auth/password.service.js"></script>
@@ -83,6 +82,7 @@
     <script src="app/services/auth/auth.oauth2.service.js"></script>
     <script src="app/services/auth/activate.service.js"></script>
     <script src="app/services/auth/account.service.js"></script>
+    <script src="app/services/user/user.service.js"></script>
     <script src="app/layouts/navbar/navbar.controller.js"></script>
     <script src="app/layouts/navbar/active-link.directive.js"></script>
     <script src="app/layouts/error/error.state.js"></script>
@@ -104,6 +104,12 @@
     <script src="app/entities/map/map-dialog.controller.js"></script>
     <script src="app/entities/map/map-detail.controller.js"></script>
     <script src="app/entities/map/map-delete-dialog.controller.js"></script>
+    <script src="app/entities/cue/cue.state.js"></script>
+    <script src="app/entities/cue/cue.service.js"></script>
+    <script src="app/entities/cue/cue.controller.js"></script>
+    <script src="app/entities/cue/cue-dialog.controller.js"></script>
+    <script src="app/entities/cue/cue-detail.controller.js"></script>
+    <script src="app/entities/cue/cue-delete-dialog.controller.js"></script>
     <script src="app/entities/camera-action/camera-action.state.js"></script>
     <script src="app/entities/camera-action/camera-action.service.js"></script>
     <script src="app/entities/camera-action/camera-action.controller.js"></script>
@@ -127,14 +133,14 @@
     <script src="app/components/util/data-util.service.js"></script>
     <script src="app/components/util/capitalize.filter.js"></script>
     <script src="app/components/util/base64.service.js"></script>
-    <script src="app/components/login/login.service.js"></script>
-    <script src="app/components/login/login.controller.js"></script>
     <script src="app/components/form/uib-pagination.config.js"></script>
     <script src="app/components/form/uib-pager.config.js"></script>
     <script src="app/components/form/show-validation.directive.js"></script>
     <script src="app/components/form/pagination.constants.js"></script>
     <script src="app/components/form/minbytes.directive.js"></script>
     <script src="app/components/form/maxbytes.directive.js"></script>
+    <script src="app/components/login/login.service.js"></script>
+    <script src="app/components/login/login.controller.js"></script>
     <script src="app/components/alert/alert.service.js"></script>
     <script src="app/components/alert/alert.directive.js"></script>
     <script src="app/components/alert/alert-error.directive.js"></script>
