--- a/src/main/webapp/app/entities/cue/cue-detail.html
+++ b/src/main/webapp/app/entities/cue/cue-detail.html
@@ -8,6 +8,21 @@
             <a ui-sref="script-detail({id:vm.cue.script.id})">{{vm.cue.script.id}}</a>
         </dd>
         <hr>
+        <dt><span>Player</span></dt>
+        <dd>
+            <a ui-sref="player-detail({id:vm.cue.player.id})">{{vm.cue.player.id}}</a>
+        </dd>
+        <hr>
+        <dt><span>Camera</span></dt>
+        <dd>
+            <a ui-sref="camera-detail({id:vm.cue.camera.id})">{{vm.cue.camera.id}}</a>
+        </dd>
+        <hr>
+        <dt><span>Camera Action</span></dt>
+        <dd>
+            <a ui-sref="camera-action-detail({id:vm.cue.cameraAction.id})">{{vm.cue.cameraAction.id}}</a>
+        </dd>
+        <hr>
     </dl>
 
     <button type="submit"
