--- a/src/main/webapp/app/entities/cue/cue-dialog.html
+++ b/src/main/webapp/app/entities/cue/cue-dialog.html
@@ -20,6 +20,24 @@
                 <option value=""></option>
             </select>
         </div>
+        <div class="form-group">
+            <label for="field_player">Player</label>
+            <select class="form-control" id="field_player" name="player" ng-model="vm.cue.player" ng-options="player as player.id for player in vm.players | orderBy:'id' track by player.id">
+                <option value=""></option>
+            </select>
+        </div>
+        <div class="form-group">
+            <label for="field_camera">Camera</label>
+            <select class="form-control" id="field_camera" name="camera" ng-model="vm.cue.camera" ng-options="camera as camera.id for camera in vm.cameras | orderBy:'id' track by camera.id">
+                <option value=""></option>
+            </select>
+        </div>
+        <div class="form-group">
+            <label for="field_cameraAction">Camera Action</label>
+            <select class="form-control" id="field_cameraAction" name="cameraAction" ng-model="vm.cue.cameraAction" ng-options="cameraAction as cameraAction.id for cameraAction in vm.cameraactions | orderBy:'id' track by cameraAction.id">
+                <option value=""></option>
+            </select>
+        </div>
     </div>
     <div class="modal-footer">
         <button type="button" class="btn btn-default" data-dismiss="modal" ng-click="vm.clear()">
