--- a/src/main/webapp/app/entities/player/players.html
+++ b/src/main/webapp/app/entities/player/players.html
@@ -1,13 +1,13 @@
 <div>
-    <h2>Cues</h2>
+    <h2>Players</h2>
     <jhi-alert></jhi-alert>
     <div class="container-fluid">
         <div class="row">
             <div class="col-xs-4 no-padding-left">
-                <button class="btn btn-primary" ui-sref="cue.new" >
+                <button class="btn btn-primary" ui-sref="player.new" >
                     <span class="glyphicon glyphicon-plus"></span>
                     <span >
-                        Create new Cue
+                        Create new Player
                     </span>
                 </button>
             </div>
@@ -19,44 +19,28 @@
             <thead>
                 <tr jh-sort="vm.predicate" ascending="vm.reverse" callback="vm.transition()">
                     <th jh-sort-by="id"><span>ID</span> <span class="glyphicon glyphicon-sort"></span></th>
-                    <th jh-sort-by="script.id"><span>Script</span> <span class="glyphicon glyphicon-sort"></span></th>
-                    <th jh-sort-by="player.id"><span>Player</span> <span class="glyphicon glyphicon-sort"></span></th>
-                    <th jh-sort-by="camera.id"><span>Camera</span> <span class="glyphicon glyphicon-sort"></span></th>
-                    <th jh-sort-by="cameraAction.id"><span>Camera Action</span> <span class="glyphicon glyphicon-sort"></span></th>
                     <th></th>
                 </tr>
             </thead>
             <tbody>
-                <tr ng-repeat="cue in vm.cues track by cue.id">
-                    <td><a ui-sref="cue-detail({id:cue.id})">{{cue.id}}</a></td>
-                    <td>
-                        <a ui-sref="script-detail({id:cue.script.id})">{{cue.script.id}}</a>
-                    </td>
-                    <td>
-                        <a ui-sref="player-detail({id:cue.player.id})">{{cue.player.id}}</a>
-                    </td>
-                    <td>
-                        <a ui-sref="camera-detail({id:cue.camera.id})">{{cue.camera.id}}</a>
-                    </td>
-                    <td>
-                        <a ui-sref="camera-action-detail({id:cue.cameraAction.id})">{{cue.cameraAction.id}}</a>
-                    </td>
+                <tr ng-repeat="player in vm.players track by player.id">
+                    <td><a ui-sref="player-detail({id:player.id})">{{player.id}}</a></td>
                     <td class="text-right">
                         <div class="btn-group flex-btn-group-container">
                             <button type="submit"
-                                    ui-sref="cue-detail({id:cue.id})"
+                                    ui-sref="player-detail({id:player.id})"
                                     class="btn btn-info btn-sm">
                                 <span class="glyphicon glyphicon-eye-open"></span>
                                 <span class="hidden-xs hidden-sm"></span>
                             </button>
                             <button type="submit"
-                                    ui-sref="cue.edit({id:cue.id})"
+                                    ui-sref="player.edit({id:player.id})"
                                     class="btn btn-primary btn-sm">
                                 <span class="glyphicon glyphicon-pencil"></span>
                                 <span class="hidden-xs hidden-sm"></span>
                             </button>
                             <button type="submit"
-                                    ui-sref="cue.delete({id:cue.id})"
+                                    ui-sref="player.delete({id:player.id})"
                                     class="btn btn-danger btn-sm">
                                 <span class="glyphicon glyphicon-remove-circle"></span>
                                 <span class="hidden-xs hidden-sm"></span>
