--- a/src/main/webapp/app/entities/cue/cue-dialog.html
+++ b/src/main/webapp/app/entities/cue/cue-dialog.html
@@ -1,5 +1,5 @@
 
-<form name="editForm" role="form" novalidate ng-submit="vm.save()" show-validation>
+<form name="editForm" role="form" novalidate ng-submit="vm.save()">
 
     <div class="modal-header">
         <button type="button" class="close" data-dismiss="modal" aria-hidden="true"
@@ -12,22 +12,6 @@
             <label for="id">ID</label>
             <input type="text" class="form-control" id="id" name="id"
                     ng-model="vm.cue.id" readonly />
-        </div>
-        <div class="form-group">
-            <label class="control-label" for="field_duration">Duration</label>
-            <input type="number" class="form-control" name="duration" id="field_duration"
-                    ng-model="vm.cue.duration"
-                    min="0" />
-            <div ng-show="editForm.duration.$invalid">
-                <p class="help-block"
-                    ng-show="editForm.duration.$error.min" translate-value-min="0">
-                    This field should be more than 0.
-                </p>
-                <p class="help-block"
-                    ng-show="editForm.duration.$error.number">
-                    This field should be a number.
-                </p>
-            </div>
         </div>
 
         <div class="form-group">
