Added name field to map, player, project and script

--- a/src/main/webapp/app/entities/map/map-detail.html
+++ b/src/main/webapp/app/entities/map/map-detail.html
@@ -3,6 +3,11 @@
     <h2><span>Map</span> {{vm.map.id}}</h2>
     <hr>
     <dl class="dl-horizontal">
+        <dt><span>Name</span></dt>
+        <dd>
+            <span>{{vm.map.name}}</span>
+        </dd>
+        <hr>
     </dl>
 
     <button type="submit"
