--- a/src/main/webapp/app/entities/map/map-dialog.html
+++ b/src/main/webapp/app/entities/map/map-dialog.html
@@ -13,6 +13,12 @@
             <input type="text" class="form-control" id="id" name="id"
                     ng-model="vm.map.id" readonly />
         </div>
+        <div class="form-group">
+            <label class="control-label" for="field_name">Name</label>
+            <input type="text" class="form-control" name="name" id="field_name"
+                    ng-model="vm.map.name"
+                     />
+        </div>
 
     </div>
     <div class="modal-footer">
