--- a/src/main/webapp/app/entities/player/player-detail.html
+++ b/src/main/webapp/app/entities/player/player-detail.html
@@ -3,6 +3,11 @@
     <h2><span>Player</span> {{vm.player.id}}</h2>
     <hr>
     <dl class="dl-horizontal">
+        <dt><span>Name</span></dt>
+        <dd>
+            <span>{{vm.player.name}}</span>
+        </dd>
+        <hr>
     </dl>
 
     <button type="submit"
