--- a/src/main/webapp/app/entities/project/project-dialog.html
+++ b/src/main/webapp/app/entities/project/project-dialog.html
@@ -13,6 +13,12 @@
             <input type="text" class="form-control" id="id" name="id"
                     ng-model="vm.project.id" readonly />
         </div>
+        <div class="form-group">
+            <label class="control-label" for="field_name">Name</label>
+            <input type="text" class="form-control" name="name" id="field_name"
+                    ng-model="vm.project.name"
+                     />
+        </div>
 
         <div class="form-group">
             <label for="field_script">Script</label>
