--- a/src/main/webapp/app/entities/script/script-detail.html
+++ b/src/main/webapp/app/entities/script/script-detail.html
@@ -3,6 +3,11 @@
     <h2><span>Script</span> {{vm.script.id}}</h2>
     <hr>
     <dl class="dl-horizontal">
+        <dt><span>Name</span></dt>
+        <dd>
+            <span>{{vm.script.name}}</span>
+        </dd>
+        <hr>
     </dl>
 
     <button type="submit"
