--- a/src/main/webapp/app/entities/script/scripts.html
+++ b/src/main/webapp/app/entities/script/scripts.html
@@ -19,12 +19,14 @@
             <thead>
                 <tr jh-sort="vm.predicate" ascending="vm.reverse" callback="vm.transition()">
                     <th jh-sort-by="id"><span>ID</span> <span class="glyphicon glyphicon-sort"></span></th>
+                    <th jh-sort-by="name"><span>Name</span> <span class="glyphicon glyphicon-sort"></span></th>
                     <th></th>
                 </tr>
             </thead>
             <tbody>
                 <tr ng-repeat="script in vm.scripts track by script.id">
                     <td><a ui-sref="script-detail({id:script.id})">{{script.id}}</a></td>
+                    <td>{{script.name}}</td>
                     <td class="text-right">
                         <div class="btn-group flex-btn-group-container">
                             <button type="submit"
