Frontend bijgewerkt en de mapfunctie herschreven

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -30,7 +30,7 @@
         <div class="well" ui-view="content"></div>
 
         <div class="footer" ng-cloak>
-            <p>This is your footer</p>
+            <p class="text-center">&copy; 2016 - The First Order</p>
         </div>
     </div>
 
@@ -186,12 +186,12 @@
     <script src="app/admin/health/health.modal.controller.js"></script>
     <script src="app/admin/health/health.controller.js"></script>
     <script src="app/admin/docs/docs.state.js"></script>
-    <script src="app/admin/configuration/configuration.state.js"></script>
-    <script src="app/admin/configuration/configuration.service.js"></script>
-    <script src="app/admin/configuration/configuration.controller.js"></script>
     <script src="app/admin/audits/audits.state.js"></script>
     <script src="app/admin/audits/audits.service.js"></script>
     <script src="app/admin/audits/audits.controller.js"></script>
+    <script src="app/admin/configuration/configuration.state.js"></script>
+    <script src="app/admin/configuration/configuration.service.js"></script>
+    <script src="app/admin/configuration/configuration.controller.js"></script>
     <script src="app/account/settings/settings.state.js"></script>
     <script src="app/account/settings/settings.controller.js"></script>
     <script src="app/account/register/register.state.js"></script>
@@ -203,9 +203,9 @@
     <script src="app/account/activate/activate.controller.js"></script>
     <script src="app/map/mapview.state.js"></script>
     <script src="app/map/mapview.controller.js"></script>
+    <script src="app/entities/entity.state.js"></script>
     <script src="app/home/home.state.js"></script>
     <script src="app/home/home.controller.js"></script>
-    <script src="app/entities/entity.state.js"></script>
     <script src="app/admin/admin.state.js"></script>
     <script src="app/account/account.state.js"></script>
     <script src="app/app.state.js"></script>
