--- a/src/main/webapp/app/map/mapview.html
+++ b/src/main/webapp/app/map/mapview.html
@@ -36,7 +36,12 @@
             </ul>
         </div>
         <div class="col-md-8">
-            <canvas id="canvas" style="width: 100%; border: 1px gray solid;"></canvas>
+            <canvas id="canvas" width="600px" style="width: 100%; border: 1px gray solid;"></canvas>
+        </div>
+    </div>
+    <div class="row">
+        <div id="mapGrid" class="col-md-12">
+
         </div>
     </div>
 </div>
