--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -68,16 +68,17 @@
     <script src="bower_components/bootstrap-sass/assets/javascripts/bootstrap.js"></script>
     <script src="bower_components/bootstrap-material-design/dist/js/material.js"></script>
     <script src="bower_components/bootstrap-material-design/dist/js/ripples.js"></script>
+    <script src="bower_components/fabric.js/dist/fabric.min.js"></script>
     <!-- endbower -->
     <!-- endbuild -->
 
     <!-- build:js app/app.js  -->
     <!-- inject:js -->
     <script src="app/app.module.js"></script>
-    <script src="app/account/reset/request/reset.request.state.js"></script>
-    <script src="app/account/reset/request/reset.request.controller.js"></script>
     <script src="app/account/reset/finish/reset.finish.state.js"></script>
     <script src="app/account/reset/finish/reset.finish.controller.js"></script>
+    <script src="app/account/reset/request/reset.request.state.js"></script>
+    <script src="app/account/reset/request/reset.request.controller.js"></script>
     <script src="app/services/user/user.service.js"></script>
     <script src="app/services/auth/register.service.js"></script>
     <script src="app/services/auth/principal.service.js"></script>
@@ -93,48 +94,6 @@
     <script src="app/layouts/navbar/navbar.controller.js"></script>
     <script src="app/layouts/navbar/active-link.directive.js"></script>
     <script src="app/layouts/error/error.state.js"></script>
-    <script src="app/entities/script/script.state.js"></script>
-    <script src="app/entities/script/script.service.js"></script>
-    <script src="app/entities/script/script.controller.js"></script>
-    <script src="app/entities/script/script-dialog.controller.js"></script>
-    <script src="app/entities/script/script-detail.controller.js"></script>
-    <script src="app/entities/script/script-delete-dialog.controller.js"></script>
-    <script src="app/entities/project/project.state.js"></script>
-    <script src="app/entities/project/project.service.js"></script>
-    <script src="app/entities/project/project.controller.js"></script>
-    <script src="app/entities/project/project-dialog.controller.js"></script>
-    <script src="app/entities/project/project-detail.controller.js"></script>
-    <script src="app/entities/project/project-delete-dialog.controller.js"></script>
-    <script src="app/entities/player/player.state.js"></script>
-    <script src="app/entities/player/player.service.js"></script>
-    <script src="app/entities/player/player.controller.js"></script>
-    <script src="app/entities/player/player-dialog.controller.js"></script>
-    <script src="app/entities/player/player-detail.controller.js"></script>
-    <script src="app/entities/player/player-delete-dialog.controller.js"></script>
-    <script src="app/entities/map/map.state.js"></script>
-    <script src="app/entities/map/map.service.js"></script>
-    <script src="app/entities/map/map.controller.js"></script>
-    <script src="app/entities/map/map-dialog.controller.js"></script>
-    <script src="app/entities/map/map-detail.controller.js"></script>
-    <script src="app/entities/map/map-delete-dialog.controller.js"></script>
-    <script src="app/entities/cue/cue.state.js"></script>
-    <script src="app/entities/cue/cue.service.js"></script>
-    <script src="app/entities/cue/cue.controller.js"></script>
-    <script src="app/entities/cue/cue-dialog.controller.js"></script>
-    <script src="app/entities/cue/cue-detail.controller.js"></script>
-    <script src="app/entities/cue/cue-delete-dialog.controller.js"></script>
-    <script src="app/entities/camera-action/camera-action.state.js"></script>
-    <script src="app/entities/camera-action/camera-action.service.js"></script>
-    <script src="app/entities/camera-action/camera-action.controller.js"></script>
-    <script src="app/entities/camera-action/camera-action-dialog.controller.js"></script>
-    <script src="app/entities/camera-action/camera-action-detail.controller.js"></script>
-    <script src="app/entities/camera-action/camera-action-delete-dialog.controller.js"></script>
-    <script src="app/entities/camera/camera.state.js"></script>
-    <script src="app/entities/camera/camera.service.js"></script>
-    <script src="app/entities/camera/camera.controller.js"></script>
-    <script src="app/entities/camera/camera-dialog.controller.js"></script>
-    <script src="app/entities/camera/camera-detail.controller.js"></script>
-    <script src="app/entities/camera/camera-delete-dialog.controller.js"></script>
     <script src="app/components/util/truncate-words.filter.js"></script>
     <script src="app/components/util/truncate-characters.filter.js"></script>
     <script src="app/components/util/sort.directive.js"></script>
@@ -148,6 +107,12 @@
     <script src="app/components/util/base64.service.js"></script>
     <script src="app/components/login/login.service.js"></script>
     <script src="app/components/login/login.controller.js"></script>
+    <script src="app/entities/project/project.state.js"></script>
+    <script src="app/entities/project/project.service.js"></script>
+    <script src="app/entities/project/project.controller.js"></script>
+    <script src="app/entities/project/project-dialog.controller.js"></script>
+    <script src="app/entities/project/project-detail.controller.js"></script>
+    <script src="app/entities/project/project-delete-dialog.controller.js"></script>
     <script src="app/components/form/uib-pagination.config.js"></script>
     <script src="app/components/form/uib-pager.config.js"></script>
     <script src="app/components/form/show-validation.directive.js"></script>
@@ -157,6 +122,42 @@
     <script src="app/components/alert/alert.service.js"></script>
     <script src="app/components/alert/alert.directive.js"></script>
     <script src="app/components/alert/alert-error.directive.js"></script>
+    <script src="app/entities/script/script.state.js"></script>
+    <script src="app/entities/script/script.service.js"></script>
+    <script src="app/entities/script/script.controller.js"></script>
+    <script src="app/entities/script/script-dialog.controller.js"></script>
+    <script src="app/entities/script/script-detail.controller.js"></script>
+    <script src="app/entities/script/script-delete-dialog.controller.js"></script>
+    <script src="app/entities/player/player.state.js"></script>
+    <script src="app/entities/player/player.service.js"></script>
+    <script src="app/entities/player/player.controller.js"></script>
+    <script src="app/entities/player/player-dialog.controller.js"></script>
+    <script src="app/entities/player/player-detail.controller.js"></script>
+    <script src="app/entities/player/player-delete-dialog.controller.js"></script>
+    <script src="app/entities/map/map.state.js"></script>
+    <script src="app/entities/map/map.service.js"></script>
+    <script src="app/entities/map/map.controller.js"></script>
+    <script src="app/entities/map/map-dialog.controller.js"></script>
+    <script src="app/entities/map/map-detail.controller.js"></script>
+    <script src="app/entities/map/map-delete-dialog.controller.js"></script>
+    <script src="app/entities/camera-action/camera-action.state.js"></script>
+    <script src="app/entities/camera-action/camera-action.service.js"></script>
+    <script src="app/entities/camera-action/camera-action.controller.js"></script>
+    <script src="app/entities/camera-action/camera-action-dialog.controller.js"></script>
+    <script src="app/entities/camera-action/camera-action-detail.controller.js"></script>
+    <script src="app/entities/camera-action/camera-action-delete-dialog.controller.js"></script>
+    <script src="app/entities/camera/camera.state.js"></script>
+    <script src="app/entities/camera/camera.service.js"></script>
+    <script src="app/entities/camera/camera.controller.js"></script>
+    <script src="app/entities/camera/camera-dialog.controller.js"></script>
+    <script src="app/entities/camera/camera-detail.controller.js"></script>
+    <script src="app/entities/camera/camera-delete-dialog.controller.js"></script>
+    <script src="app/entities/cue/cue.state.js"></script>
+    <script src="app/entities/cue/cue.service.js"></script>
+    <script src="app/entities/cue/cue.controller.js"></script>
+    <script src="app/entities/cue/cue-dialog.controller.js"></script>
+    <script src="app/entities/cue/cue-detail.controller.js"></script>
+    <script src="app/entities/cue/cue-delete-dialog.controller.js"></script>
     <script src="app/blocks/interceptor/notification.interceptor.js"></script>
     <script src="app/blocks/interceptor/errorhandler.interceptor.js"></script>
     <script src="app/blocks/interceptor/auth.interceptor.js"></script>
@@ -178,33 +179,33 @@
     <script src="app/admin/metrics/metrics.service.js"></script>
     <script src="app/admin/metrics/metrics.modal.controller.js"></script>
     <script src="app/admin/metrics/metrics.controller.js"></script>
-    <script src="app/admin/logs/logs.state.js"></script>
-    <script src="app/admin/logs/logs.service.js"></script>
-    <script src="app/admin/logs/logs.controller.js"></script>
     <script src="app/admin/health/health.state.js"></script>
     <script src="app/admin/health/health.service.js"></script>
     <script src="app/admin/health/health.modal.controller.js"></script>
     <script src="app/admin/health/health.controller.js"></script>
-    <script src="app/admin/docs/docs.state.js"></script>
+    <script src="app/admin/logs/logs.state.js"></script>
+    <script src="app/admin/logs/logs.service.js"></script>
+    <script src="app/admin/logs/logs.controller.js"></script>
+    <script src="app/account/settings/settings.state.js"></script>
+    <script src="app/account/settings/settings.controller.js"></script>
     <script src="app/admin/configuration/configuration.state.js"></script>
     <script src="app/admin/configuration/configuration.service.js"></script>
     <script src="app/admin/configuration/configuration.controller.js"></script>
+    <script src="app/admin/docs/docs.state.js"></script>
+    <script src="app/account/register/register.state.js"></script>
+    <script src="app/account/register/register.controller.js"></script>
     <script src="app/admin/audits/audits.state.js"></script>
     <script src="app/admin/audits/audits.service.js"></script>
     <script src="app/admin/audits/audits.controller.js"></script>
-    <script src="app/account/settings/settings.state.js"></script>
-    <script src="app/account/settings/settings.controller.js"></script>
-    <script src="app/account/register/register.state.js"></script>
-    <script src="app/account/register/register.controller.js"></script>
     <script src="app/account/password/password.state.js"></script>
     <script src="app/account/password/password.controller.js"></script>
     <script src="app/account/password/password-strength-bar.directive.js"></script>
     <script src="app/account/activate/activate.state.js"></script>
     <script src="app/account/activate/activate.controller.js"></script>
-    <script src="app/map/mapview.state.js"></script>
-    <script src="app/map/mapview.controller.js"></script>
     <script src="app/home/home.state.js"></script>
     <script src="app/home/home.controller.js"></script>
+    <script src="app/map/mapview.state.js"></script>
+    <script src="app/map/mapview.controller.js"></script>
     <script src="app/entities/entity.state.js"></script>
     <script src="app/admin/admin.state.js"></script>
     <script src="app/account/account.state.js"></script>
