--- a/src/main/webapp/app/map/mapview.html
+++ b/src/main/webapp/app/map/mapview.html
@@ -28,7 +28,7 @@
         </div>
         <div class="col-md-8">
             <div id="map">
-                <canvas id="concertMap" width="600" height="500" style="background-image: url('/content/images/grid15x15.png')"></canvas>
+                <canvas id="concertMap" width="600" height="500"></canvas>
             </div>
         </div>
     </div>
