Added page and canvas for the timeline. Also added authorization to the pages.

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -79,7 +79,6 @@
     <script src="app/account/reset/request/reset.request.controller.js"></script>
     <script src="app/account/reset/finish/reset.finish.state.js"></script>
     <script src="app/account/reset/finish/reset.finish.controller.js"></script>
-    <script src="app/services/user/user.service.js"></script>
     <script src="app/services/auth/register.service.js"></script>
     <script src="app/services/auth/principal.service.js"></script>
     <script src="app/services/auth/password.service.js"></script>
@@ -91,6 +90,7 @@
     <script src="app/services/auth/auth.oauth2.service.js"></script>
     <script src="app/services/auth/activate.service.js"></script>
     <script src="app/services/auth/account.service.js"></script>
+    <script src="app/services/user/user.service.js"></script>
     <script src="app/layouts/navbar/navbar.controller.js"></script>
     <script src="app/layouts/navbar/active-link.directive.js"></script>
     <script src="app/layouts/error/error.state.js"></script>
@@ -202,6 +202,8 @@
     <script src="app/account/password/password-strength-bar.directive.js"></script>
     <script src="app/account/activate/activate.state.js"></script>
     <script src="app/account/activate/activate.controller.js"></script>
+    <script src="app/timeline/timeline.state.js"></script>
+    <script src="app/timeline/timeline.controller.js"></script>
     <script src="app/map/mapview.state.js"></script>
     <script src="app/map/mapview.controller.js"></script>
     <script src="app/home/home.state.js"></script>
