Added page and canvas for the timeline. Also added authorization to the pages.

--- a/src/main/webapp/app/timeline/timeline.html
+++ b/src/main/webapp/app/timeline/timeline.html
@@ -1,9 +1,9 @@
 <div ng-cloak>
     <div class="row">
         <div class="col-md-12">
-            <h2 class="text-center">Timeline</h2>
+            <h2 class="text-center">Timeline</h2><br /><br />
             <div id="timeline">
-                <canvas id="concertTimeline" width="600" height="500"></canvas>
+                <canvas id="concertTimeline" width="1200" height="50"></canvas>
             </div>
         </div>
     </div>
