--- a/src/main/webapp/app/timeline/timeline.html
+++ b/src/main/webapp/app/timeline/timeline.html
@@ -3,7 +3,7 @@
         <div class="col-md-12">
             <h2 class="text-center">Timeline</h2><br /><br />
             <div id="timeline">
-                <canvas id="concertTimeline" width="1200" height="50"></canvas>
+                <canvas id="concertTimeline"></canvas>
             </div>
         </div>
     </div>
