Players are now drawn on the map, only the functionality with adding and moving has to be updated

--- a/src/main/webapp/app/entities/player/player-detail.html
+++ b/src/main/webapp/app/entities/player/player-detail.html
@@ -8,6 +8,16 @@
             <span>{{vm.player.name}}</span>
         </dd>
         <hr>
+        <dt><span>X</span></dt>
+        <dd>
+            <span>{{vm.player.x}}</span>
+        </dd>
+        <hr>
+        <dt><span>Y</span></dt>
+        <dd>
+            <span>{{vm.player.y}}</span>
+        </dd>
+        <hr>
     </dl>
 
     <button type="submit"
