--- a/src/main/webapp/app/entities/player/player-dialog.html
+++ b/src/main/webapp/app/entities/player/player-dialog.html
@@ -19,6 +19,18 @@
                     ng-model="vm.player.name"
                      />
         </div>
+        <div class="form-group">
+            <label class="control-label" for="field_x">X</label>
+            <input type="number" class="form-control" name="x" id="field_x"
+                    ng-model="vm.player.x"
+                     />
+        </div>
+        <div class="form-group">
+            <label class="control-label" for="field_y">Y</label>
+            <input type="number" class="form-control" name="y" id="field_y"
+                    ng-model="vm.player.y"
+                     />
+        </div>
 
     </div>
     <div class="modal-footer">
