Players and cameras can now be added and can have a name (all provided by the form under the map)

--- a/src/main/webapp/app/map/mapview.html
+++ b/src/main/webapp/app/map/mapview.html
@@ -44,7 +44,8 @@
             </table><br />
             <h2>Diagram Legend</h2>
             <ul class="list-group">
-                <li class="list-group-item"><p style="color: #00b0ff;">Cameras</p></li>
+                <li class="list-group-item"><p style="color: blue;">Camera</p></li>
+                <li class="list-group-item"><p style="color: green;">Player</p></li>
             </ul>
         </div>
         <div class="col-md-8">
@@ -63,7 +64,7 @@
             <div class="row">
                 <div class="col-md-4">
                     <fieldset class="form-group">
-                        <input type="email" class="form-control" id="exampleInputEmail1" placeholder="Name">
+                        <input type="text" class="form-control" id="nameNewObject" placeholder="Name">
                     </fieldset>
                 </div>
                 <!--<div class="col-md-4">Test</div>-->
