--- a/src/main/webapp/app/entities/cue/cues.html
+++ b/src/main/webapp/app/entities/cue/cues.html
@@ -4,7 +4,9 @@
     <div class="container-fluid">
         <div class="row">
             <div class="col-xs-4 no-padding-left">
-                <button class="btn btn-primary" ui-sref="cue.new" >
+                <button class="btn btn-primary"
+                        has-authority="ROLE_ADMIN"
+                        ui-sref="cue.new" >
                     <span class="glyphicon glyphicon-plus"></span>
                     <span >
                         Create new Cue
@@ -50,12 +52,14 @@
                                 <span class="hidden-xs hidden-sm"></span>
                             </button>
                             <button type="submit"
+                                    has-authority="ROLE_ADMIN"
                                     ui-sref="cue.edit({id:cue.id})"
                                     class="btn btn-primary btn-sm">
                                 <span class="glyphicon glyphicon-pencil"></span>
                                 <span class="hidden-xs hidden-sm"></span>
                             </button>
                             <button type="submit"
+                                    has-authority="ROLE_ADMIN"
                                     ui-sref="cue.delete({id:cue.id})"
                                     class="btn btn-danger btn-sm">
                                 <span class="glyphicon glyphicon-remove-circle"></span>
