--- a/src/main/webapp/app/entities/map/maps.html
+++ b/src/main/webapp/app/entities/map/maps.html
@@ -4,7 +4,9 @@
     <div class="container-fluid">
         <div class="row">
             <div class="col-xs-4 no-padding-left">
-                <button class="btn btn-primary" ui-sref="map.new" >
+                <button class="btn btn-primary"
+                        has-authority="ROLE_ADMIN"
+                        ui-sref="map.new" >
                     <span class="glyphicon glyphicon-plus"></span>
                     <span >
                         Create new Map
@@ -36,12 +38,14 @@
                                 <span class="hidden-xs hidden-sm"></span>
                             </button>
                             <button type="submit"
+                                    has-authority="ROLE_ADMIN"
                                     ui-sref="map.edit({id:map.id})"
                                     class="btn btn-primary btn-sm">
                                 <span class="glyphicon glyphicon-pencil"></span>
                                 <span class="hidden-xs hidden-sm"></span>
                             </button>
                             <button type="submit"
+                                    has-authority="ROLE_ADMIN"
                                     ui-sref="map.delete({id:map.id})"
                                     class="btn btn-danger btn-sm">
                                 <span class="glyphicon glyphicon-remove-circle"></span>
