--- a/src/main/webapp/app/entities/camera-action/camera-action-dialog.html
+++ b/src/main/webapp/app/entities/camera-action/camera-action-dialog.html
@@ -19,13 +19,13 @@
                     ng-model="vm.cameraAction.name"
                      />
         </div>
-        <div class="form-group">
-            <label class="control-label" for="field_duration">Duration</label>
-            <input type="number" class="form-control" name="duration" id="field_duration"
-                    ng-model="vm.cameraAction.duration"
-                     />
-        </div>
 
+        <div class="form-group">
+            <label for="field_camera">Camera</label>
+            <select class="form-control" id="field_camera" name="camera" ng-model="vm.cameraAction.camera" ng-options="camera as camera.name for camera in vm.cameras track by camera.id">
+                <option value=""></option>
+            </select>
+        </div>
     </div>
     <div class="modal-footer">
         <button type="button" class="btn btn-default" data-dismiss="modal" ng-click="vm.clear()">
