Add a reference to Script in a Cue.
Uni-directional one-to-many relations are complicated, so we keep it a
bi-directional relationship for now.

--- a/src/main/webapp/app/entities/cue/cue-detail.html
+++ b/src/main/webapp/app/entities/cue/cue-detail.html
@@ -23,6 +23,11 @@
             <a ui-sref="player-detail({id:vm.cue.player.id})">{{vm.cue.player.name}}</a>
         </dd>
         <hr>
+        <dt><span>Script</span></dt>
+        <dd>
+            <a ui-sref="script-detail({id:vm.cue.script.id})">{{vm.cue.script.name}}</a>
+        </dd>
+        <hr>
     </dl>
 
     <button type="submit"
