--- a/src/main/webapp/app/entities/cue/cues.html
+++ b/src/main/webapp/app/entities/cue/cues.html
@@ -25,6 +25,7 @@
                     <th jh-sort-by="cameraAction.name"><span>Camera Action</span> <span class="glyphicon glyphicon-sort"></span></th>
                     <th jh-sort-by="timePoint.startTime"><span>Time Point</span> <span class="glyphicon glyphicon-sort"></span></th>
                     <th jh-sort-by="player.name"><span>Player</span> <span class="glyphicon glyphicon-sort"></span></th>
+                    <th jh-sort-by="script.name"><span>Script</span> <span class="glyphicon glyphicon-sort"></span></th>
                     <th></th>
                 </tr>
             </thead>
@@ -42,6 +43,9 @@
                     </td>
                     <td>
                         <a ui-sref="player-detail({id:cue.player.id})">{{cue.player.name}}</a>
+                    </td>
+                    <td>
+                        <a ui-sref="script-detail({id:cue.script.id})">{{cue.script.name}}</a>
                     </td>
                     <td class="text-right">
                         <div class="btn-group flex-btn-group-container">
