Include project reference in entities.
Changed a lot of relationships.

--- a/src/main/webapp/app/entities/cue/cue-detail.html
+++ b/src/main/webapp/app/entities/cue/cue-detail.html
@@ -23,9 +23,9 @@
             <a ui-sref="player-detail({id:vm.cue.player.id})">{{vm.cue.player.name}}</a>
         </dd>
         <hr>
-        <dt><span>Script</span></dt>
+        <dt><span>Camera</span></dt>
         <dd>
-            <a ui-sref="script-detail({id:vm.cue.script.id})">{{vm.cue.script.name}}</a>
+            <a ui-sref="camera-detail({id:vm.cue.camera.id})">{{vm.cue.camera.name}}</a>
         </dd>
         <hr>
     </dl>
