--- a/src/main/webapp/app/entities/cue/cue-dialog.html
+++ b/src/main/webapp/app/entities/cue/cue-dialog.html
@@ -39,8 +39,8 @@
             </select>
         </div>
         <div class="form-group">
-            <label for="field_script">Script</label>
-            <select class="form-control" id="field_script" name="script" ng-model="vm.cue.script" ng-options="script as script.name for script in vm.scripts track by script.id">
+            <label for="field_camera">Camera</label>
+            <select class="form-control" id="field_camera" name="camera" ng-model="vm.cue.camera" ng-options="camera as camera.name for camera in vm.cameras track by camera.id">
                 <option value=""></option>
             </select>
         </div>
