--- a/src/main/webapp/app/entities/camera/camera-detail.html
+++ b/src/main/webapp/app/entities/camera/camera-detail.html
@@ -18,6 +18,11 @@
             <span>{{vm.camera.y}}</span>
         </dd>
         <hr>
+        <dt><span>Project</span></dt>
+        <dd>
+            <a ui-sref="project-detail({id:vm.camera.project.id})">{{vm.camera.project.name}}</a>
+        </dd>
+        <hr>
     </dl>
 
     <button type="submit"
