--- a/src/main/webapp/app/entities/cue/cues.html
+++ b/src/main/webapp/app/entities/cue/cues.html
@@ -26,6 +26,7 @@
                     <th jh-sort-by="timePoint.startTime"><span>Time Point</span> <span class="glyphicon glyphicon-sort"></span></th>
                     <th jh-sort-by="player.name"><span>Player</span> <span class="glyphicon glyphicon-sort"></span></th>
                     <th jh-sort-by="script.name"><span>Script</span> <span class="glyphicon glyphicon-sort"></span></th>
+                    <th jh-sort-by="camera.name"><span>Camera</span> <span class="glyphicon glyphicon-sort"></span></th>
                     <th></th>
                 </tr>
             </thead>
@@ -45,7 +46,7 @@
                         <a ui-sref="player-detail({id:cue.player.id})">{{cue.player.name}}</a>
                     </td>
                     <td>
-                        <a ui-sref="script-detail({id:cue.script.id})">{{cue.script.name}}</a>
+                        <a ui-sref="camera-detail({id:cue.camera.id})">{{cue.camera.name}}</a>
                     </td>
                     <td class="text-right">
                         <div class="btn-group flex-btn-group-container">
