--- a/src/main/webapp/app/entities/player/player-dialog.html
+++ b/src/main/webapp/app/entities/player/player-dialog.html
@@ -32,6 +32,12 @@
                      />
         </div>
 
+        <div class="form-group">
+            <label for="field_project">Project</label>
+            <select class="form-control" id="field_project" name="project" ng-model="vm.player.project" ng-options="project as project.name for project in vm.projects track by project.id">
+                <option value=""></option>
+            </select>
+        </div>
     </div>
     <div class="modal-footer">
         <button type="button" class="btn btn-default" data-dismiss="modal" ng-click="vm.clear()">
