Added load an existing project popup

--- a/src/main/webapp/app/home/home.html
+++ b/src/main/webapp/app/home/home.html
@@ -22,7 +22,7 @@
                         <p class="lead">
                             <button class="btn btn-primary"
                                     has-any-authority="ROLE_ADMIN,ROLE_DIRECTOR"
-                                    ui-sref="home.create">
+                                    ui-sref="home.load">
                     <span>
                         Load an existing project
                     </span>
