--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -81,8 +81,6 @@
     <script src="app/account/reset/request/reset.request.controller.js"></script>
     <script src="app/account/reset/finish/reset.finish.state.js"></script>
     <script src="app/account/reset/finish/reset.finish.controller.js"></script>
-    <script src="app/services/user/user.service.js"></script>
-    <script src="app/services/user/project-manager.service.js"></script>
     <script src="app/services/auth/register.service.js"></script>
     <script src="app/services/auth/principal.service.js"></script>
     <script src="app/services/auth/password.service.js"></script>
@@ -94,6 +92,8 @@
     <script src="app/services/auth/auth.oauth2.service.js"></script>
     <script src="app/services/auth/activate.service.js"></script>
     <script src="app/services/auth/account.service.js"></script>
+    <script src="app/services/user/user.service.js"></script>
+    <script src="app/services/user/project-manager.service.js"></script>
     <script src="app/layouts/navbar/navbar.controller.js"></script>
     <script src="app/layouts/navbar/active-link.directive.js"></script>
     <script src="app/layouts/error/error.state.js"></script>
@@ -117,24 +117,18 @@
     <script src="app/entities/project/project-dialog.controller.js"></script>
     <script src="app/entities/project/project-detail.controller.js"></script>
     <script src="app/entities/project/project-delete-dialog.controller.js"></script>
-    <script src="app/entities/map/map.state.js"></script>
-    <script src="app/entities/map/map.service.js"></script>
-    <script src="app/entities/map/map.controller.js"></script>
-    <script src="app/entities/map/map-dialog.controller.js"></script>
-    <script src="app/entities/map/map-detail.controller.js"></script>
-    <script src="app/entities/map/map-delete-dialog.controller.js"></script>
     <script src="app/entities/player/player.state.js"></script>
     <script src="app/entities/player/player.service.js"></script>
     <script src="app/entities/player/player.controller.js"></script>
     <script src="app/entities/player/player-dialog.controller.js"></script>
     <script src="app/entities/player/player-detail.controller.js"></script>
     <script src="app/entities/player/player-delete-dialog.controller.js"></script>
-    <script src="app/entities/camera/camera.state.js"></script>
-    <script src="app/entities/camera/camera.service.js"></script>
-    <script src="app/entities/camera/camera.controller.js"></script>
-    <script src="app/entities/camera/camera-dialog.controller.js"></script>
-    <script src="app/entities/camera/camera-detail.controller.js"></script>
-    <script src="app/entities/camera/camera-delete-dialog.controller.js"></script>
+    <script src="app/entities/map/map.state.js"></script>
+    <script src="app/entities/map/map.service.js"></script>
+    <script src="app/entities/map/map.controller.js"></script>
+    <script src="app/entities/map/map-dialog.controller.js"></script>
+    <script src="app/entities/map/map-detail.controller.js"></script>
+    <script src="app/entities/map/map-delete-dialog.controller.js"></script>
     <script src="app/entities/cue/cue.state.js"></script>
     <script src="app/entities/cue/cue.service.js"></script>
     <script src="app/entities/cue/cue.controller.js"></script>
@@ -147,6 +141,12 @@
     <script src="app/entities/camera-action/camera-action-dialog.controller.js"></script>
     <script src="app/entities/camera-action/camera-action-detail.controller.js"></script>
     <script src="app/entities/camera-action/camera-action-delete-dialog.controller.js"></script>
+    <script src="app/entities/camera/camera.state.js"></script>
+    <script src="app/entities/camera/camera.service.js"></script>
+    <script src="app/entities/camera/camera.controller.js"></script>
+    <script src="app/entities/camera/camera-dialog.controller.js"></script>
+    <script src="app/entities/camera/camera-detail.controller.js"></script>
+    <script src="app/entities/camera/camera-delete-dialog.controller.js"></script>
     <script src="app/components/util/truncate-words.filter.js"></script>
     <script src="app/components/util/truncate-characters.filter.js"></script>
     <script src="app/components/util/sort.directive.js"></script>
@@ -158,14 +158,14 @@
     <script src="app/components/util/data-util.service.js"></script>
     <script src="app/components/util/capitalize.filter.js"></script>
     <script src="app/components/util/base64.service.js"></script>
+    <script src="app/components/login/login.service.js"></script>
+    <script src="app/components/login/login.controller.js"></script>
     <script src="app/components/form/uib-pagination.config.js"></script>
     <script src="app/components/form/uib-pager.config.js"></script>
     <script src="app/components/form/show-validation.directive.js"></script>
     <script src="app/components/form/pagination.constants.js"></script>
     <script src="app/components/form/minbytes.directive.js"></script>
     <script src="app/components/form/maxbytes.directive.js"></script>
-    <script src="app/components/login/login.service.js"></script>
-    <script src="app/components/login/login.controller.js"></script>
     <script src="app/components/alert/alert.service.js"></script>
     <script src="app/components/alert/alert.directive.js"></script>
     <script src="app/components/alert/alert-error.directive.js"></script>
@@ -179,20 +179,20 @@
     <script src="app/admin/user-management/user-management-dialog.controller.js"></script>
     <script src="app/admin/user-management/user-management-detail.controller.js"></script>
     <script src="app/admin/user-management/user-management-delete-dialog.controller.js"></script>
+    <script src="app/admin/tracker/tracker.state.js"></script>
+    <script src="app/admin/tracker/tracker.service.js"></script>
+    <script src="app/admin/tracker/tracker.controller.js"></script>
     <script src="app/blocks/config/localstorage.config.js"></script>
     <script src="app/blocks/config/http.config.js"></script>
     <script src="app/blocks/config/compile.config.js"></script>
     <script src="app/blocks/config/alert.config.js"></script>
-    <script src="app/admin/tracker/tracker.state.js"></script>
-    <script src="app/admin/tracker/tracker.service.js"></script>
-    <script src="app/admin/tracker/tracker.controller.js"></script>
-    <script src="app/admin/logs/logs.state.js"></script>
-    <script src="app/admin/logs/logs.service.js"></script>
-    <script src="app/admin/logs/logs.controller.js"></script>
     <script src="app/admin/metrics/metrics.state.js"></script>
     <script src="app/admin/metrics/metrics.service.js"></script>
     <script src="app/admin/metrics/metrics.modal.controller.js"></script>
     <script src="app/admin/metrics/metrics.controller.js"></script>
+    <script src="app/admin/logs/logs.state.js"></script>
+    <script src="app/admin/logs/logs.service.js"></script>
+    <script src="app/admin/logs/logs.controller.js"></script>
     <script src="app/admin/health/health.state.js"></script>
     <script src="app/admin/health/health.service.js"></script>
     <script src="app/admin/health/health.modal.controller.js"></script>
@@ -217,10 +217,11 @@
     <script src="app/timeline/timeline.controller.js"></script>
     <script src="app/map/mapview.state.js"></script>
     <script src="app/map/mapview.controller.js"></script>
-    <script src="app/entities/entity.state.js"></script>
+    <script src="app/home/load-dialog.controller.js"></script>
     <script src="app/home/home.state.js"></script>
     <script src="app/home/home.controller.js"></script>
     <script src="app/home/create-dialog.controller.js"></script>
+    <script src="app/entities/entity.state.js"></script>
     <script src="app/admin/admin.state.js"></script>
     <script src="app/account/account.state.js"></script>
     <script src="app/app.state.js"></script>
