Added draw grid function to mapview

--- a/src/main/webapp/app/map/mapview.html
+++ b/src/main/webapp/app/map/mapview.html
@@ -12,9 +12,12 @@
         </div>
         <div class="col-md-8">
             <h2 class="text-center">Graphical Overview</h2>
-            <div id="map">
-                <canvas id="concertMap" width="600" height="500"></canvas>
-            </div>
+            <br />
+            <CENTER>
+                <div id="map">
+                    <canvas id="concertMap" width="600" height="500"></canvas>
+                </div>
+            </CENTER>
         </div>
     </div>
 </div>
