Fixed some layout issues

--- a/src/main/webapp/app/scripting/scriptingview.html
+++ b/src/main/webapp/app/scripting/scriptingview.html
@@ -2,7 +2,10 @@
     <div class="row">
         <div class="col-md-7">
             <div id="map">
-                <canvas id="concertMap" width="600" height="500"></canvas>
+                <CENTER>
+                    <br />
+                    <canvas id="concertMap" width="600" height="500"></canvas>
+                </CENTER>
             </div>
         </div>
         <div class="col-md-5">
