Created "create new project" button in load project popup, when no projects can be shown

--- a/src/main/webapp/app/home/home.html
+++ b/src/main/webapp/app/home/home.html
@@ -32,7 +32,7 @@
                             </button>
                         </p>
                     </div>
-                    <div ng-switch="vm.hasProject">
+                    <div ng-switch="vm.hasCurrentProject">
                         <div ng-switch-when="true" class="col-md-4"><span class="glyphicon glyphicon-circle-arrow-right"
                                                                           style="font-size: 60pt;"></span>
                             <hr/>
