--- a/src/main/webapp/app/home/loadproject-dialog.html
+++ b/src/main/webapp/app/home/loadproject-dialog.html
@@ -7,7 +7,8 @@
     </div>
     <div class="modal-body">
         <div class="table-responsive">
-            <table class="jh-table table table-striped">
+            <div ng-switch="vm.hasProjects">
+            <table ng-switch-when="true" class="jh-table table table-striped">
                 <thead>
                 <tr jh-sort="vm.predicate" ascending="vm.reverse" callback="vm.transition()">
                     <th jh-sort-by="id"><span>ID</span> <span class="glyphicon glyphicon-sort"></span></th>
@@ -35,6 +36,18 @@
                 </tr>
                 </tbody>
             </table>
+                <div ng-switch-when="false">
+                    No projects available.</br>
+                    <button class="btn btn-primary"
+                            has-any-authority="ROLE_ADMIN,ROLE_DIRECTOR"
+                            ng-click="vm.create()" >
+                        <span class="glyphicon glyphicon-plus"></span>
+                    <span >
+                        Create new Project
+                    </span>
+                    </button>
+                </div>
+            </div>
         </div>
     </div>
     <div class="modal-footer">
