Replace cameraAction with just a String

--- a/src/main/webapp/app/entities/cue/cue-detail.html
+++ b/src/main/webapp/app/entities/cue/cue-detail.html
@@ -8,9 +8,9 @@
             <a ui-sref="script-detail({id:vm.cue.script.id})">{{vm.cue.script.name}}</a>
         </dd>
         <hr>
-        <dt><span>Camera Action</span></dt>
+        <dt><span>Action</span></dt>
         <dd>
-            <a ui-sref="camera-action-detail({id:vm.cue.cameraAction.id})">{{vm.cue.cameraAction.name}}</a>
+            <span>{{vm.cue.action}}</span>
         </dd>
         <hr>
         <dt><span>Time Point</span></dt>
