--- a/src/main/webapp/app/entities/cue/cue-dialog.html
+++ b/src/main/webapp/app/entities/cue/cue-dialog.html
@@ -13,16 +13,16 @@
             <input type="text" class="form-control" id="id" name="id"
                     ng-model="vm.cue.id" readonly />
         </div>
+        <div class="form-group">
+            <label class="control-label" for="field_action">Action</label>
+            <input type="text" class="form-control" name="action" id="field_action"
+                    ng-model="vm.cue.action"
+                     />
+        </div>
 
         <div class="form-group">
             <label for="field_script">Script</label>
             <select class="form-control" id="field_script" name="script" ng-model="vm.cue.script" ng-options="script as script.name for script in vm.scripts track by script.id">
-                <option value=""></option>
-            </select>
-        </div>
-        <div class="form-group">
-            <label for="field_cameraAction">Camera Action</label>
-            <select class="form-control" id="field_cameraAction" name="cameraAction" ng-model="vm.cue.cameraAction" ng-options="cameraAction as cameraAction.name for cameraAction in vm.cameraactions | orderBy:'id' track by cameraAction.id">
                 <option value=""></option>
             </select>
         </div>
@@ -35,6 +35,12 @@
         <div class="form-group">
             <label for="field_player">Player</label>
             <select class="form-control" id="field_player" name="player" ng-model="vm.cue.player" ng-options="player as player.name for player in vm.players track by player.id">
+                <option value=""></option>
+            </select>
+        </div>
+        <div class="form-group">
+            <label for="field_script">Script</label>
+            <select class="form-control" id="field_script" name="script" ng-model="vm.cue.script" ng-options="script as script.name for script in vm.scripts track by script.id">
                 <option value=""></option>
             </select>
         </div>
