Load cues in correct camera timeline

--- a/src/main/webapp/app/scripting/scripting-new-dialog.html
+++ b/src/main/webapp/app/scripting/scripting-new-dialog.html
@@ -9,8 +9,8 @@
     <div class="modal-body">
         <jhi-alert-error></jhi-alert-error>
         <div class="form-group">
-            <label class="control-label" for="field_cameraAction">Camera action</label>
-            <input type="text" class="form-control" name="cameraAction" id="field_cameraAction" ng-model="vm.cue.name" />
+            <label for="cameraAction">Camera action</label>
+            <input type="text" class="form-control" name="cameraAction" id="cameraAction" ng-model="vm.cue.name" />
         </div>
     </div>
     <div class="modal-footer">
