--- a/src/main/webapp/app/scripting/scripting.html
+++ b/src/main/webapp/app/scripting/scripting.html
@@ -14,6 +14,7 @@
                 </select>
             </div>
         </div>
+        <button value="Save" class="btn btn-default" ng-disabled="saved" ng-click="vm.save()">Save</button>
         <div class="row">
             <div class="col-md-12">
                 <br />
